--- a/src/style/scss/pages/_call.scss
+++ b/src/style/scss/pages/_call.scss
@@ -1437,7 +1437,7 @@
             align-items: flex-start;
             -webkit-align-items: flex-start;
             flex-shrink: 0;
-            .dreams_chat {
+            .theme_chat {
                 width: 40px;
                 height: 40px;
                 object-fit: cover;
